# aws-kvs-webrtc-stream-dockerised

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  run.sh
.github/workflows/: build_push.yml
include/: Samples.h
src/: Common.c  main.c
